# sqlite4java-build

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  build-x64-vs-2017.bat  build-x64-vs-2019.bat  build-x86-vs-2017.bat  build-x86-vs-2019.bat  build.bat  build.sh  logging.properties  pom.xml
.circleci/: config.yml
